<resources>
    <string name="app_name">What\'s On Netflix</string>
    <string name="search_hint">Search by title</string>
    <string name="action_search_title">Search</string>
    <string name="settings_screen_title">Settings</string>
    <string name="region_update_screen_title">Region</string>
    <string name="series_tab">Series</string>
    <string name="movies_tab">Movies</string>
    <string name="content_synopsis_text">Synopsis:</string>
    <string name="content_year_text">Year:</string>
    <string name="content_streaming_date_text">Streaming date:</string>
    <string name="content_runtime_text">Runtime:</string>
    <string name="tv_shows_runtime">Typically 24–60+ minutes per episode</string>
    <string name="maturity_label_text">Maturity label:</string>
    <string name="refresh_content_error">Couldn\'t refresh content</string>
    <string name="load_content_detail_error">Couldn\'t load content details</string>
    <string name="searching_for_query">Searching for \"%s\"…</string>
    <string name="search_no_results_found">No results for"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_message">Welcome to the unofficial Netflix global search app</string>
    <string name="select_region_text">Select your region/country</string>
    <string name="empty_list_error_message">Whoops! something went wrong</string>
    <string name="retry_btn">Retry</string>
    <string name="hd_icon">Icon</string>
    <string name="region_updated">Region updated!</string>

    <string-array name="titles">
        <item name="new_release">New Releases</item>
        <item name="tv_shows">TV Shows</item>
        <item name="movies">Movies</item>
        <item name="leaving_soon">Leaving Soon</item>
    </string-array>

    <string name="preference_file_key">region</string>
    <string name="default_value">0</string>
    <string name="more_like_this_text">More Like This</string>
    <string name="search_icon_description">Search icon</string>
    <string name="search_bar_message">Search for a show or movie</string>


</resources>