<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph.xml"
    android:label="@string/settings_screen_title"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.android.course.whatsonnetflix.ui.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_contentDetailFragment2"
            app:destination="@id/contentDetailFragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@android:anim/fade_out" />
        <action
            android:id="@+id/action_homeFragment_to_regionSelectionFragment"
            app:destination="@id/welcomeScreenFragment"
            app:launchSingleTop="true"
            app:popUpToInclusive="false" />
        <action
            android:id="@+id/action_homeFragment_to_settingsFragment"
            app:destination="@id/settingsFragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@android:anim/fade_out" />
        <action
            android:id="@+id/action_homeFragment_to_searchableFragment"
            app:destination="@id/searchableFragment" />
    </fragment>
    <fragment
        android:id="@+id/contentDetailFragment"
        android:name="com.android.course.whatsonnetflix.ui.ContentDetailFragment"
        android:label="Details"
        tools:layout="@layout/fragment_content_detail">
        <argument
            android:name="netflixItem"
            app:argType="com.android.course.whatsonnetflix.domain.NetflixItemModel" />
        <action
            android:id="@+id/action_contentDetailFragment_self"
            app:destination="@id/contentDetailFragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/welcomeScreenFragment"
        android:name="com.android.course.whatsonnetflix.ui.WelcomeScreenFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_welcome_screen" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.android.course.whatsonnetflix.ui.SettingsFragment"
        android:label="Settings">
        <action
            android:id="@+id/action_settingsFragment_to_regionUpdateFragment"
            app:destination="@id/regionUpdateFragment" />
    </fragment>
    <fragment
        android:id="@+id/regionUpdateFragment"
        android:name="com.android.course.whatsonnetflix.ui.RegionUpdateFragment"
        android:label="@string/region_update_screen_title"
        tools:layout="@layout/fragment_region_update" />
    <fragment
        android:id="@+id/searchableFragment"
        android:name="com.android.course.whatsonnetflix.ui.SearchableFragment"
        android:label="SearchableFragment"
        tools:layout="@layout/fragment_searchable">
        <action
            android:id="@+id/action_searchableFragment_to_searchResultsFragment"
            app:destination="@id/searchResultsFragment"
            app:popUpTo="@id/homeFragment"
            app:popUpToInclusive="false" />
    </fragment>
    <fragment
        android:id="@+id/searchResultsFragment"
        android:name="com.android.course.whatsonnetflix.ui.SearchResultsFragment"
        android:label="fragment_search_results"
        tools:layout="@layout/fragment_search_results">
        <action
            android:id="@+id/action_searchResultsFragment_to_contentDetailFragment"
            app:destination="@id/contentDetailFragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@android:anim/fade_out" />
        <action
            android:id="@+id/action_searchResultsFragment_to_searchableFragment"
            app:destination="@id/searchableFragment"
            app:popUpTo="@id/homeFragment" />
        <argument
            android:name="searchTerm"
            app:argType="string" />
    </fragment>
</navigation>